[package]
name = "obj_scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
errno = "0.3.9"
libc = "0.2.161"
regex = "1.11.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
tempfile = "3.13.0"
threadpool = "1.8.1"
