#
# Copyright 2015. Triad National Security, LLC. All rights reserved.
#
# Full details and licensing terms can be found in the License file in the main development branch
# of the repository.
#
# MarFS was reviewed and released by LANL under Los Alamos Computer Code identifier: LA-CC-15-039.
#

if BENCH
  MAYBE_BENCHMARK = isal_benchmark
endif

SUBDIRS = logging thread_queue dal io ne recursion hash mdal tagging recovery \
          config datastream api rsrc_mgr fuse $(MAYBE_BENCHMARK)

